// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search renders help 1`] = `
<div
  className="search-page"
>
  <div
    className="input-group"
  >
    <div
      className="input-group-prepend"
      onKeyDown={[Function]}
    >
      <button
        aria-expanded={false}
        aria-haspopup={true}
        className="dropdown-toggle btn btn-secondary"
        onClick={[Function]}
        type="button"
      >
        Search by 
        Text
      </button>
      <div
        aria-hidden={true}
        className="dropdown-menu"
        role="menu"
        tabIndex="-1"
      >
        <button
          className="dropdown-item"
          data-type="ID"
          onClick={[Function]}
          tabIndex="0"
          type="button"
        >
          ID
        </button>
        <button
          className="dropdown-item"
          data-type="Text"
          onClick={[Function]}
          tabIndex="0"
          type="button"
        >
          Text
        </button>
      </div>
    </div>
    <input
      className="form-control"
      onKeyPress={[Function]}
      type="text"
    />
    <div
      className="input-group-append"
    >
      <button
        className="btn btn-secondary"
        onClick={[Function]}
        type="button"
      >
        Search
      </button>
    </div>
  </div>
  <small
    className="form-text text-muted"
  >
    Enter text to search for.  Assessment metadata is searched first and then statisistics
  </small>
</div>
`;

exports[`Search renders search 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 .icon + span {
  margin-left: 0.5rem;
}

.c1 {
  float: right;
  margin: 0 0 1rem 1rem;
}

.c4 {
  color: #49a0b5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4 + .c4 {
  margin-left: 0.5rem;
  padding-left: 0.5rem;
  border-left: 1px solid #acdbd8;
}

.c0 {
  margin-top: 1rem;
  padding-top: 1rem;
  border-top: 1px solid grey;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

<div
  className="search-page"
>
  <div
    className="input-group"
  >
    <div
      className="input-group-prepend"
      onKeyDown={[Function]}
    >
      <button
        aria-expanded={false}
        aria-haspopup={true}
        className="dropdown-toggle btn btn-secondary"
        onClick={[Function]}
        type="button"
      >
        Search by 
        Text
      </button>
      <div
        aria-hidden={true}
        className="dropdown-menu"
        role="menu"
        tabIndex="-1"
      >
        <button
          className="dropdown-item"
          data-type="ID"
          onClick={[Function]}
          tabIndex="0"
          type="button"
        >
          ID
        </button>
        <button
          className="dropdown-item"
          data-type="Text"
          onClick={[Function]}
          tabIndex="0"
          type="button"
        >
          Text
        </button>
      </div>
    </div>
    <input
      className="form-control"
      onKeyPress={[Function]}
      type="text"
    />
    <div
      className="input-group-append"
    >
      <button
        className="btn btn-secondary"
        onClick={[Function]}
        type="button"
      >
        Search
      </button>
    </div>
  </div>
  <div
    className="c0"
  >
    <button
      className="c1 c2 btn btn-secondary btn-sm"
      onClick={[Function]}
      type="button"
    >
      <span>
        Download
      </span>
    </button>
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>Ipsa qui unde nihil laudantium nihil autem eius voluptas. Vel dignissimos facilis voluptates quae inventore asperiores sit est quae. Cum sint mollitia aut provident qui ipsa voluptatem natus et. Voluptas quas animi aut vitae. Nihil error neque consequatur aperiam et voluptas. Rem temporibus et asperiores eum a sed autem eveniet quis.</p>",
        }
      }
    />
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        Member: 
      </div>
      <div
        className="c4"
      >
        ID: 
        379d79cc-cd42-443c-9f2e-15087a5bc518
      </div>
      <div
        className="c4"
      >
        Version: 
      </div>
      <div
        className="c4"
      >
        <a
          aria-current={null}
          className={undefined}
          href="/formats/esse"
          onClick={[Function]}
          style={undefined}
        >
          Format: 
        </a>
      </div>
      <div
        className="c4"
      />
    </div>
  </div>
</div>
`;
